redactable/tests/ui/sensitive_container_not_sensitive_rejected.rs
use redactable::Sensitive;

#[derive(Sensitive)]
#[not_sensitive]
struct Event {
    value: String,
}

fn main() {}
